fix(CSS): set custom scrollbar thumb opacity to visible (v1.3)

--- a/app/globals.css
+++ b/app/globals.css
@@ -348,7 +348,7 @@
   width: 0.5rem;
   scale: 1;
   border-radius: 0.5rem;
-  opacity: 0;
+  opacity: 1;
   transition: all 300ms ease;
 }
 
